# MediaProcesser

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  demo_char_animation.cpp  demo_recorder.cpp  demo_split.cpp
src/: image_filter.cpp  image_filter.h  media_decoder_common.h  media_decoder_interface.h  media_recoder_interface.h  media_recorder_common.h  media_recorder_interface.h  mp4_video_recoder.cpp  mp4_video_recorder.cpp  video_decoder.cpp
test/: scale_convert_benchmark.cpp
util/: logger.cpp  logger.h  poca_str.cpp  poca_str.h  ring_fifo.cpp  ring_fifo.h  semaphore.cpp  semaphore.h
